-- MySQL Script generated by MySQL Workbench
-- Fri Jan 24 08:55:48 2020
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema expressfood
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema expressfood
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `expressfood` DEFAULT CHARACTER SET utf8 ;
USE `expressfood` ;

-- -----------------------------------------------------
-- Table `expressfood`.`client`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `expressfood`.`client` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `username` VARCHAR(16) NOT NULL,
  `email` VARCHAR(255) NULL,
  `password` VARCHAR(32) NOT NULL,
  `create_time` TIMESTAMP NULL DEFAULT CURRENT_TIMESTAMP,
  `phone` VARCHAR(20) NULL,
  `address` VARCHAR(255) NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `expressfood`.`type`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `expressfood`.`type` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `type` VARCHAR(45) NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `expressfood`.`product`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `expressfood`.`product` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `product_name` VARCHAR(45) NULL,
  `description` VARCHAR(255) NULL,
  `price` INT(11) NULL,
  `type_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_product_type1_idx` (`type_id` ASC),
  CONSTRAINT `fk_product_type1`
    FOREIGN KEY (`type_id`)
    REFERENCES `expressfood`.`type` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `expressfood`.`deliverer`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `expressfood`.`deliverer` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `deliverer_name` VARCHAR(45) NULL,
  `position` VARCHAR(255) NULL,
  `status` TINYINT NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `expressfood`.`cart`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `expressfood`.`cart` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `client_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_cart_client_idx` (`client_id` ASC),
  CONSTRAINT `fk_cart_client`
    FOREIGN KEY (`client_id`)
    REFERENCES `expressfood`.`client` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `expressfood`.`client_order`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `expressfood`.`client_order` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `order_date` TIMESTAMP NULL DEFAULT CURRENT_TIMESTAMP,
  `id_client` INT NULL,
  `id_cart` INT NULL,
  `cart_id` INT NOT NULL,
  `deliverer_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_client_order_cart1_idx` (`cart_id` ASC),
  INDEX `fk_client_order_deliverer1_idx` (`deliverer_id` ASC),
  CONSTRAINT `fk_client_order_cart1`
    FOREIGN KEY (`cart_id`)
    REFERENCES `expressfood`.`cart` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_client_order_deliverer1`
    FOREIGN KEY (`deliverer_id`)
    REFERENCES `expressfood`.`deliverer` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `expressfood`.`cart_product`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `expressfood`.`cart_product` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `quantity` INT NULL,
  `cart_id` INT NOT NULL,
  `product_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_cart_product_cart1_idx` (`cart_id` ASC),
  INDEX `fk_cart_product_product1_idx` (`product_id` ASC),
  CONSTRAINT `fk_cart_product_cart1`
    FOREIGN KEY (`cart_id`)
    REFERENCES `expressfood`.`cart` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_cart_product_product1`
    FOREIGN KEY (`product_id`)
    REFERENCES `expressfood`.`product` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `expressfood`.`stock_product`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `expressfood`.`stock_product` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `stock_quantity` INT NULL,
  `product_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_stock_product_product1_idx` (`product_id` ASC),
  CONSTRAINT `fk_stock_product_product1`
    FOREIGN KEY (`product_id`)
    REFERENCES `expressfood`.`product` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `expressfood`.`deliverer_stock`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `expressfood`.`deliverer_stock` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `stock_product_id` INT NOT NULL,
  `quantity` INT NULL,
  `deliverer_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_deliverer_stock_stock_product1_idx` (`stock_product_id` ASC),
  INDEX `fk_deliverer_stock_deliverer1_idx` (`deliverer_id` ASC),
  CONSTRAINT `fk_deliverer_stock_stock_product1`
    FOREIGN KEY (`stock_product_id`)
    REFERENCES `expressfood`.`stock_product` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_deliverer_stock_deliverer1`
    FOREIGN KEY (`deliverer_id`)
    REFERENCES `expressfood`.`deliverer` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `expressfood`.`order_state`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `expressfood`.`order_state` (
  `id_order_state` INT NOT NULL,
  `name` VARCHAR(45) NULL,
  PRIMARY KEY (`id_order_state`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `expressfood`.`deliverer_stock`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `expressfood`.`deliverer_stock` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `stock_product_id` INT NOT NULL,
  `quantity` INT NULL,
  `deliverer_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_deliverer_stock_stock_product1_idx` (`stock_product_id` ASC),
  INDEX `fk_deliverer_stock_deliverer1_idx` (`deliverer_id` ASC),
  CONSTRAINT `fk_deliverer_stock_stock_product1`
    FOREIGN KEY (`stock_product_id`)
    REFERENCES `expressfood`.`stock_product` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_deliverer_stock_deliverer1`
    FOREIGN KEY (`deliverer_id`)
    REFERENCES `expressfood`.`deliverer` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
