@startuml
header expressfood
title Diagramme de classe
class Client {
  +id : INT
  +username : STRING
  +email : STRING
  +password : STRING
  +create_time : DATETIME
  +address : TEXT
  +phone : INT
}
class Cart {
  +id : INT
}
class Product {
  +id : INT
  +name : STRING
  +description : STRING
  +price : FLOAT
  +stock_product : INT
}
class Cart_product {
  +id : INT
  +quantity : INT
}
class Product_type {
  +id : INT
  +type : STRING
}

class Order_state {
  +id : INT
  +state_name : STRING
}
class Order {
  +id : INT
  +order_date : DATETIME
}
class Deliverer {
  +id : INT
  +position : STRING
  +name : STRING
  +is_available : BOOL
  +position : STRING
}
class Deliverer_stock_product {
  +id : INT
  +deliverer_stock_quantity : INT
}
Client "0..1" - "*" Cart
Cart "1..*" - "0..1" Product
(Cart, Product) . Cart_product
Product "*" - "1" Product_type
Cart "1" --- "1" Order
Order "1..*" <-- "1" Order_state
Order "0..*" - "1" Deliverer
Product "1..*" -- "1..*" Deliverer
(Deliverer, Product) .. Deliverer_stock_product
@enduml